clusters/easy-platform/flux-system/webhooks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhooks
  namespace: flux-system
  annotations:
    platform.lazycampus.com/domain-automation: enabled
spec:
  ingressClassName: traefik
  rules:
    - host: hooks.lazycampus.com
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  name: http
